--- a/Kingstine-JoFoods.html
+++ b/Kingstine-JoFoods.html
@@ -110,6 +110,7 @@ html, body {
 	}
 
 }
+
 @media(min-width:768px) {
 	  .pictureRight img{
 		margin-left: -10%; margin:15px; border-radius:1%; width:100%; position-fixed
@@ -121,12 +122,13 @@ html, body {
 		border: 0; margin-left: -2%; padding:2% 15% 2% 5%; height: 300px; width: 100%;
 	}
 }
+
 @media(min-width:992px) {
 	 .pictureRight img{
-		width:83%; opacity:;margin:50px  0 0 60px; height:60%; border-radius:1%
+		width:83%; margin:50px  0 0 60px; height:60%; border-radius:1%;
 	}
 	.picture img{
-		 opacity:; margin:15px; border-radius:1%; width:100%; position-fixed
+	  margin:15px; border-radius:1%; width:100%; position-fixed
 	}
 	
 	.bigPicture img{
@@ -250,9 +252,6 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
 
     <!-- Loader Start -->
-	<a href="#" onclick="topFunction()" id="myBtn" title="Go to top" style="display: block;">
-		<span id="myBtn:hover" style="opacity: 1;"> </span>
-	
 	
     <div class="css-loader">
         <div class="loader-inner line-scale d-flex align-items-center justify-content-center"></div>
@@ -316,9 +315,9 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 <div class="col-12 offset-md-1 col-md-11">
                      <div class="swiper-wrapper">
                             <div class="swiper-slide slide-content d-flex align-items-center">
-                                <div class="single-slide" >
+                                <div class="single-slide">
                                     <h1 data-aos="fade-center" data-aos-delay="200">Kingstine-Jo Foods</h1>
-                                    <p data-aos="fade-center" data-aos-delay="600"><strong>Fast Food Restaurant · African Restaurant · Food & Beverage Company.</strong></p>
+                                    <p data-aos="fade-center" data-aos-delay="600"><strong>Fast</strong> Food Restaurant · African Restaurant · Food & Beverage Company. </p>
                                 </div>
                             </div>
                             </div>
@@ -546,7 +545,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     </div>
                     <div class="col-md-6 col-xl-3">
                         <div class="single-widget twitter-widget" data-aos="fade-up" data-aos-delay="200">
-                            <div class="fb-page" data-href="https://www.facebook.com/ggeventshall" data-tabs="timeline,events,messages" data-width="250" data-height="400" data-small-header="false" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="true"><blockquote cite="https://www.facebook.com/ggeventshall" class="fb-xfbml-parse-ignore"><a href="https://www.facebook.com/ggeventshall">Ggeventshall</a></blockquote></div>
+                            <div class="fb-page" data-href="https://www.facebook.com/ggeventshall" data-tabs="timeline,events,messages" data-width="" data-height="300" data-small-header="false" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="true"><blockquote cite="https://www.facebook.com/ggeventshall" class="fb-xfbml-parse-ignore"><a href="https://www.facebook.com/ggeventshall">Ggeventshall</a></blockquote></div>
                         </div>
                     </div>
                     <div class="col-md-6 col-xl-3">
@@ -591,6 +590,11 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 	</div>
         <!-- Foot Note End -->
 		</section>
+		
+		<a href="#" onclick="topFunction()" id="myBtn" title="Go to top" style="display: block;">
+		<span id="myBtn:hover" style="opacity: 1;"> </span>
+	
+	
     </footer>
     <!-- Footer Endt -->
     <!--jQuery-->
