--- a/about.html
+++ b/about.html
@@ -289,9 +289,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     <div class="title">
                         <h6 class="title-primary">OUR VISION AND MISSION</h6>
                         <h1 class="title-blue">What is our desire and our objective?</h1>
-						<p>
-						we endeavour to create a unique and great solution for meetings, gatherings and events by providing a beautiful standard, clean, accessible and affordable facility for our customers.
-						</p>
+						<p>we endeavour to create a unique and great solution for meetings, gatherings and events by providing a beautiful standard, clean, accessible and affordable facility for our customers.</p>
                     </div>
                     <div class="media-element d-flex justify-content-between">
                         <div class="media">
@@ -625,7 +623,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     </div>
                     <div class="col-md-6 col-xl-3">
                         <div class="single-widget twitter-widget" data-aos="fade-up" data-aos-delay="200">
-                            <div class="fb-page" data-href="https://www.facebook.com/ggeventshall" data-tabs="timeline,events,messages" data-width="250" data-height="400" data-small-header="false" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="true"><blockquote cite="https://www.facebook.com/ggeventshall" class="fb-xfbml-parse-ignore"><a href="https://www.facebook.com/ggeventshall">Ggeventshall</a></blockquote></div>
+                            <div class="fb-page" data-href="https://www.facebook.com/ggeventshall" data-tabs="timeline,events,messages" data-width="" data-height="300" data-small-header="false" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="true"><blockquote cite="https://www.facebook.com/ggeventshall" class="fb-xfbml-parse-ignore"><a href="https://www.facebook.com/ggeventshall">Ggeventshall</a></blockquote></div>
                         </div>
                     </div>
                     <div class="col-md-6 col-xl-3">
