--- a/contact.html
+++ b/contact.html
@@ -256,8 +256,6 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
 
 <!-- Loader Start -->
-<a href="#" onclick="topFunction()" id="myBtn" title="Go to top" style="display: block;">
-		<span id="myBtn:hover" style="opacity: 1;"> </span>
 
     <div class="css-loader">
         <div class="loader-inner line-scale d-flex align-items-center justify-content-center"></div>
@@ -496,7 +494,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     </div>
                     <div class="col-md-6 col-xl-3">
                         <div class="single-widget twitter-widget" data-aos="fade-up" data-aos-delay="200">
-                            <div class="fb-page" data-href="https://www.facebook.com/ggeventshall" data-tabs="timeline,events,messages" data-width="250" data-height="400" data-small-header="false" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="true"><blockquote cite="https://www.facebook.com/ggeventshall" class="fb-xfbml-parse-ignore"><a href="https://www.facebook.com/ggeventshall">Ggeventshall</a></blockquote></div>
+                            <div class="fb-page" data-href="https://www.facebook.com/ggeventshall" data-tabs="timeline,events,messages" data-width="" data-height="300" data-small-header="false" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="true"><blockquote cite="https://www.facebook.com/ggeventshall" class="fb-xfbml-parse-ignore"><a href="https://www.facebook.com/ggeventshall">Ggeventshall</a></blockquote></div>
                         </div>
                     </div>
                     <div class="col-md-6 col-xl-3">
@@ -539,6 +537,10 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 	</div>
         <!-- Foot Note End -->
 		</section>
+		
+		<a href="#" onclick="topFunction()" id="myBtn" title="Go to top" style="display: block;">
+		<span id="myBtn:hover" style="opacity: 1;"> </span>
+
     </footer>
     <!-- Footer Endt -->
     <!--jQuery-->
