--- a/eventhall.html
+++ b/eventhall.html
@@ -400,9 +400,6 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <!--
 <div class="image-container set-full-height" style="background-image: url('https://subtlepatterns.com/patterns/sativa.png')">
      Loader Start -->
-	 <a href="#" onclick="topFunction()" id="myBtn" title="Go to top" style="display: block;">
-		<span id="myBtn:hover" style="opacity: 1;"> </span>
-	 
 	 
     <div class="css-loader">
         <div class="loader-inner line-scale d-flex align-items-center justify-content-center"></div>
@@ -783,7 +780,7 @@ Third Floor
                     </div>
                     <div class="col-md-6 col-xl-3">
                         <div class="single-widget twitter-widget" data-aos="fade-up" data-aos-delay="200">
-                            <div class="fb-page" data-href="https://www.facebook.com/ggeventshall" data-tabs="timeline,events,messages" data-width="250" data-height="400" data-small-header="false" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="true"><blockquote cite="https://www.facebook.com/ggeventshall" class="fb-xfbml-parse-ignore"><a href="https://www.facebook.com/ggeventshall">Ggeventshall</a></blockquote></div>
+                            <div class="fb-page" data-href="https://www.facebook.com/ggeventshall" data-tabs="timeline,events,messages" data-width="" data-height="300" data-small-header="false" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="true"><blockquote cite="https://www.facebook.com/ggeventshall" class="fb-xfbml-parse-ignore"><a href="https://www.facebook.com/ggeventshall">Ggeventshall</a></blockquote></div>
                         </div>
                     </div>
                     <div class="col-md-6 col-xl-3">
@@ -826,6 +823,11 @@ Third Floor
 	</div>
         <!-- Foot Note End -->
 		</section>
+		
+		<a href="#" onclick="topFunction()" id="myBtn" title="Go to top" style="display: block;">
+		<span id="myBtn:hover" style="opacity: 1;"> </span>
+	 
+	 
     </footer>
     <!-- Footer Endt -->
     <!--jQuery-->
