--- a/index.html
+++ b/index.html
@@ -1586,7 +1586,7 @@ Utilise our well situated shops to propel your business forward with access to t
                     </div>
                     <div class="col-md-6 col-xl-3">
                         <div class="single-widget twitter-widget" data-aos="fade-up" data-aos-delay="200">
-                            <div class="fb-page" data-href="https://www.facebook.com/ggeventshall" data-tabs="timeline,events,messages" data-width="250" data-height="400" data-small-header="false" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="true"><blockquote cite="https://www.facebook.com/ggeventshall" class="fb-xfbml-parse-ignore"><a href="https://www.facebook.com/ggeventshall">Ggeventshall</a></blockquote></div>
+                            <div class="fb-page" data-href="https://www.facebook.com/ggeventshall" data-tabs="timeline,events,messages" data-width="" data-height="300" data-small-header="false" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="true"><blockquote cite="https://www.facebook.com/ggeventshall" class="fb-xfbml-parse-ignore"><a href="https://www.facebook.com/ggeventshall">Ggeventshall</a></blockquote></div>
                         </div>
                     </div>
                     <div class="col-md-6 col-xl-3">
