--- a/contact.html
+++ b/contact.html
@@ -321,7 +321,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                             <div class="swiper-slide slide-content d-flex align-items-center">
                                 <div class="single-slide">
                                     <h1 data-aos="fade-center" data-aos-delay="200">Contact US</h1>
-                                    <p data-aos="fade-center" data-aos-delay="600"><strong>Reach Out To US</strong></p>
+                                    <p data-aos="fade-center" data-aos-delay="600">Reach Out To US</p>
                                 </div>
                             </div>
                             </div>
@@ -414,7 +414,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                      <div class="single-contact">
                         <i class="fa fa-envelope"></i>
                         <h5>Email</h5>
-                        <p>info@GGeventhall.com</p>
+                        <p>info@ggeventhalls.com</p>
                      </div>
                 </div>
             </div>
