--- a/index.html
+++ b/index.html
@@ -984,7 +984,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                                 <div class="single-slide">
                                     <h1 data-aos="fade-right" data-aos-delay="200">Choose Flexible<br> Usage Options
                                     </h1>
-                                    <p data-aos="fade-right" data-aos-delay="600"><strong>Get access to Great God Events Halls, your venue for great and successful events.</strong>
+                                    <p data-aos="fade-right" data-aos-delay="600">Get access to Great God Events Halls, your venue for great and successful events.
                                     </p>
 									<section class="link">
                                     <a data-aos="fade-right" data-aos-delay="900" href="eventhall.html" class="btn btn-primary">More about our Halls</a>
@@ -996,7 +996,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                                 <div class="single-slide">
                                     <h1 data-aos="fade-right" data-aos-delay="200">Beautiful<br> and Spacious Halls
                                     </h1>
-                                    <p data-aos="fade-right" data-aos-delay="600"><strong>Whether you need eventspace for one hour or more, we have a solution for you.</strong>
+                                    <p data-aos="fade-right" data-aos-delay="600">Whether you need eventspace for one hour or more, we have a solution for you.
                                     </p>
 									<section class="link">
                                     <a data-aos="fade-right" data-aos-delay="900" href="eventhall.html" class="btn btn-primary">More about our Halls</a>
@@ -1008,7 +1008,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                                 <div class="single-slide">
                                     <h1 data-aos="fade-right" data-aos-delay="200">Join our<br> successful events
                                     </h1>
-                                    <p data-aos="fade-right" data-aos-delay="600"><strong>Join people with successful events hosted by us.</strong>
+                                    <p data-aos="fade-right" data-aos-delay="600">Join people with successful events hosted by us.
                                     </p>
 									<section class="link">
                                     <a data-aos="fade-right" data-aos-delay="900" href="eventhall.html" class="btn btn-primary">More about our Halls</a>
