--- a/about.html
+++ b/about.html
@@ -230,7 +230,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                             <div class="swiper-slide slide-content d-flex align-items-center">
                                 <div class="single-slide">
                                     <h1 data-aos="fade-center" data-aos-delay="200">About Us...</h1>
-                                    <p data-aos="fade-center" data-aos-delay="600"><strong>Who We Are</strong></p>
+                                    <p data-aos="fade-center" data-aos-delay="600">Who We Are</p>
                                 </div>
                             </div>
                             </div>
