--- a/eventhall.html
+++ b/eventhall.html
@@ -465,7 +465,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                             <div class="swiper-slide slide-content d-flex align-items-center">
                                 <div class="single-slide">
                                     <h1 data-aos="fade-center" data-aos-delay="200">Event Halls  </h1>
-                                    <p data-aos="fade-center" data-aos-delay="600"><strong>Welcome to Great God Events Hall, your venue for great and successful events.</strong></p>
+                                    <p data-aos="fade-center" data-aos-delay="600">Welcome to Great God Events Hall, your venue for great and successful events.</p>
                                 </div>
                             </div>
                             </div>
