--- a/shops.html
+++ b/shops.html
@@ -199,7 +199,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                             <div class="swiper-slide slide-content d-flex align-items-center">
                                 <div class="single-slide">
                                     <h1 data-aos="fade-center" data-aos-delay="200">Shops...</h1>
-                                    <p data-aos="fade-center" data-aos-delay="600"><strong>Great Shops For Rent.</strong></p>
+                                    <p data-aos="fade-center" data-aos-delay="600">Great Shops For Rent.</p>
                                 </div>
                             </div>
                         </div>
