--- a/contact.html
+++ b/contact.html
@@ -196,6 +196,7 @@ textarea {
 .contact-form button[type="submit"] {
 	background-color: #ee1515;
 	border: 0px;
+	color: #fff;
 	cursor: pointer;
 	font-size: 16px;
 	-webkit-transition: .4s;
@@ -394,7 +395,8 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                            </div>
                            <div class="col-xl-12 form-group">
                               <textarea placeholder="message" name="message" id="message" class="form-control" cols="30" rows="10"></textarea>
-                              <button type="submit" name="submit-mail" class="btn btn-lg btn-default" >Send</button>
+                              <button type="submit" name="submit-mail" class="btn btn-lg btn-default" style="background-color: #ee1515;
+	border: 0px;color: #fff;cursor: pointer;font-size: 16px;-webkit-transition: .4s; margin-top: 1em; transition: .4s">Send</button>
 							</div>
 						</div>
                     </form>
