--- a/shops.html
+++ b/shops.html
@@ -126,7 +126,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
   page_id="1016450635227960"
   theme_color="#ee1515"
   logged_in_greeting="We are live and ready to chat with you now. Say something to start a live chat."
-  logged_out_greeting="We are live and ready to chat with you now. Say something to start a live chat.">
+  logged_out_greeting="Need assistance? Talk with an agent now! Our Live Chat team are online and waiting to assist you.">
 </div>
 
 <div id="fb-root"></div>
