--- a/about.html
+++ b/about.html
@@ -660,7 +660,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 <div
                     class="footer-content text-center text-lg-left d-lg-flex justify-content-between align-items-center">
                     <p class="mb-0" data-aos="fade-right" data-aos-offset="0">&copy; 2019 GGEventHalls, All Rights Reserved. <!-- <a href="https://freehtml5.co/multipurpose" target="_blank" class="fh5-link">FreeHTML5.co </a> --></p>
-                    <p class="mb-0" data-aos="fade-left" data-aos-offset="0"><a href="m.me/ggeventshall" class="promotion-btn"> <i class="fa fa-weixin" aria-hidden="true"></i>LIVE CHAT </a><a
+                    <p class="mb-0" data-aos="fade-left" data-aos-offset="0"><a href="https://webmail.migadu.com" class="promotion-btn"> <i class="fa fa-weixin" aria-hidden="true"></i>WEB MAIL </a>
                         <a href="#">God is Great!</a></p>
                 </div>
             </div>
