--- a/contact.html
+++ b/contact.html
@@ -540,9 +540,10 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         <!-- Foot Note End -->
 		</section>
 		
-		<a href="#" onclick="topFunction()" id="myBtn" title="Go to top" style="display: block;">
-		<span id="myBtn:hover" style="opacity: 1;"> </span>
-
+		 <!-- Scroll top here -->
+  <a href="#" class="size-60 text-center"><span class="scroll-to-top "> <i class="fa fa-arrow-circle-up size-25" aria-hidden="true"></i>
+</span></a>
+	
     </footer>
     <!-- Footer Endt -->
     <!--jQuery-->
