--- a/index.html
+++ b/index.html
@@ -1613,8 +1613,10 @@ Utilise our well situated shops to propel your business forward with access to t
 		</section>
 		
 		
-		<a href="#" onclick="topFunction()" id="myBtn" title="Go to top" style="display: block;">
-		<span id="myBtn:hover" style="opacity: 1;"> </span>
+		 <!-- Scroll top here -->
+  <a href="#" class="size-60 text-center"><span class="scroll-to-top "> <i class="fa fa-arrow-circle-up size-25" aria-hidden="true"></i>
+</span></a>
+	
     </footer>
     <!-- Footer Endt -->
     <!--jQuery-->
