--- a/eventhall.html
+++ b/eventhall.html
@@ -355,7 +355,14 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 	position: relative;
 	padding: -20%;
 }
+.hero .slide-content h1 {
+    margin: 50px 0 25px 0;
+  }
+  
 }
+
+@media (min-width: 420px) { margin: 50px 0 25px 0;}
+@media (min-width: 576px) { margin: 50px 0 25px 0;}
 
  </style>
 </head>
