--- a/Kingstine-JoFoods.html
+++ b/Kingstine-JoFoods.html
@@ -93,8 +93,15 @@ html, body {
   
                          /*media quary */
 @media(max-width:420px) {
+.hero .slide-content h1 {
+    margin: 50px 0 25px 0;
+  }
   
 }
+
+@media (min-width: 420px) { margin: 50px 0 25px 0;}
+@media (min-width: 576px) { margin: 50px 0 25px 0;}
+
 @media(max-width:767px) {
 		.pictureRight img{
 		margin-left: -10%; margin:15px; border-radius:1%; width:100%; position-fixed
