--- a/about.html
+++ b/about.html
@@ -93,7 +93,15 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 	.featured-small {
 	margin-left: 0%; margin:15px; border-radius:1%; height: 30%; margin-top: 2%;
 	}
+.hero .slide-content h1 {
+    margin: 50px 0 25px 0;
+  }
+  
 }
+
+@media (min-width: 420px) { margin: 50px 0 25px 0;}
+@media (min-width: 576px) { margin: 50px 0 25px 0;}
+	
 	@media(max-width:767px) {
 		.featured-big {
 	margin-left: 0%; margin:15px; border-radius:1%; height: 70%; margin-top: 2%;
