--- a/shops.html
+++ b/shops.html
@@ -92,7 +92,15 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 	margin: 20px 0 20px 0;
 	padding: 0 500% 0 0;
 }
+
+ .hero .slide-content h1 {
+    margin: 50px 0 25px 0;
+  }
+  
 }
+
+@media (min-width: 420px) { margin: 50px 0 25px 0;}
+@media (min-width: 576px) { margin: 50px 0 25px 0;}
 </style>
 </head>
 
