--- a/eventhall.html
+++ b/eventhall.html
@@ -361,8 +361,18 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
   
 }
 
-@media (min-width: 420px) { margin: 50px 0 25px 0;}
-@media (min-width: 576px) { margin: 50px 0 25px 0;}
+
+@media (min-width: 420px) { 
+.hero .slide-content h1 {
+    margin: 50px 0 25px 0;
+  }
+ 
+}
+@media (min-width: 576px) { 
+.hero .slide-content h1 {
+    margin: 50px 0 25px 0;
+  }
+}
 
  </style>
 </head>
@@ -822,7 +832,7 @@ Third Floor
                 <div
                     class="footer-content text-center text-lg-left d-lg-flex justify-content-between align-items-center">
                     <p class="mb-0" data-aos="fade-right" data-aos-offset="0">&copy; 2019 GGEventHalls, All Rights Reserved. <!-- <a href="https://freehtml5.co/multipurpose" target="_blank" class="fh5-link">FreeHTML5.co </a> --></p>
-                    <p class="mb-0" data-aos="fade-left" data-aos-offset="0"><a href="https://webmail.migadu.com" class="promotion-btn"> <i class="fa fa-weixin" aria-hidden="true"></i>WEB MAIL </a>
+                    <p class="mb-0" data-aos="fade-left" data-aos-offset="0"><a href="#" class="promotion-btn" onclick="window.open('https://webmail.migadu.com', '_blank');return true;"> <i class="fa fa-weixin" aria-hidden="true"></i>WEB MAIL </a>
 					<a href="#">God is Great!</a></p>
                 </div>
             </div>
