--- a/contact.html
+++ b/contact.html
@@ -223,8 +223,18 @@ textarea {
   
 }
 
-@media (min-width: 420px) { margin: 50px 0 25px 0;}
-@media (min-width: 576px) { margin: 50px 0 25px 0;}
+
+@media (min-width: 420px) { 
+.hero .slide-content h1 {
+    margin: 50px 0 25px 0;
+  }
+ 
+}
+@media (min-width: 576px) { 
+.hero .slide-content h1 {
+    margin: 50px 0 25px 0;
+  }
+}
 
 </style>
 </head>
