--- a/index.html
+++ b/index.html
@@ -1603,7 +1603,7 @@ Utilise our well situated shops to propel your business forward with access to t
                 <div
                     class="footer-content text-center text-lg-left d-lg-flex justify-content-between align-items-center">
                     <p class="mb-0" data-aos="fade-right" data-aos-offset="0">&copy; 2019 GGEventHalls, All Rights Reserved. <!-- <a href="https://freehtml5.co/multipurpose" target="_blank" class="fh5-link">FreeHTML5.co </a> --></p>
-                    <p class="mb-0" data-aos="fade-left" data-aos-offset="0"><a href="https://webmail.migadu.com" class="promotion-btn"> <i class="fa fa-weixin" aria-hidden="true"></i>WEB MAIL </a>
+                    <p class="mb-0" data-aos="fade-left" data-aos-offset="0"><a href="#" class="promotion-btn" onclick="window.open('https://webmail.migadu.com', '_blank');return true;"> <i class="fa fa-weixin" aria-hidden="true"></i>WEB MAIL </a>
 					<a href="#">God is Great!</a></p>
                 </div>
             </div>
