--- a/about.html
+++ b/about.html
@@ -94,7 +94,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 	margin-left: 0%; margin:15px; border-radius:1%; height: 30%; margin-top: 2%;
 	}
 .hero .slide-content h1 {
-    margin: 50px 0 25px 0;
+    margin: 25px 0 25px 0;
   }
   
 }
@@ -102,13 +102,13 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 
 @media (min-width: 420px) { 
 .hero .slide-content h1 {
-    margin: 50px 0 25px 0;
+    margin: 25px 0 25px 0;
   }
  
 }
 @media (min-width: 576px) { 
 .hero .slide-content h1 {
-    margin: 50px 0 25px 0;
+    margin: 25px 0 25px 0;
   }
 }
 	
@@ -641,7 +641,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     </div>
                     <div class="col-md-6 col-xl-3">
                         <div class="single-widget twitter-widget" data-aos="fade-up" data-aos-delay="200">
-                            <div class="fb-page" data-href="https://www.facebook.com/ggeventshall" data-tabs="timeline,events,messages"data-width="260" data-height="300" data-small-header="false" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="true"><blockquote cite="https://www.facebook.com/ggeventshall" class="fb-xfbml-parse-ignore"><a href="https://www.facebook.com/ggeventshall">Ggeventshall</a></blockquote></div>
+                            <div class="fb-page" data-href="https://www.facebook.com/ggeventshall" data-tabs="timeline,events,messages"data-width="" data-height="300" data-small-header="false" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="true"><blockquote cite="https://www.facebook.com/ggeventshall" class="fb-xfbml-parse-ignore"><a href="https://www.facebook.com/ggeventshall">Ggeventshall</a></blockquote></div>
                         </div>
                     </div>
                     <div class="col-md-6 col-xl-3">
