--- a/Kingstine-JoFoods.html
+++ b/Kingstine-JoFoods.html
@@ -94,20 +94,20 @@ html, body {
                          /*media quary */
 @media(max-width:420px) {
 .hero .slide-content h1 {
-    margin: 50px 0 25px 0;
+    margin: 25px 0 25px 0;
   }
   
 }
 
 @media (min-width: 420px) { 
 .hero .slide-content h1 {
-    margin: 50px 0 25px 0;
+    margin: 25px 0 25px 0;
   }
  
 }
 @media (min-width: 576px) { 
 .hero .slide-content h1 {
-    margin: 50px 0 25px 0;
+    margin: 25px 0 20px 0;
   }
 }
 
@@ -373,7 +373,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     <div class="featured" style="background-color: yellow;">
         <div class="container">
             <div class="row">
-                <div class="col-md-12" data-aos="fade-right" data-aos-delay="400" data-aos-duration="800">
+                <div class="col-md-12" data-aos="fade-center" data-aos-delay="400" data-aos-duration="800">
                     <div class="title">
                         <h6 class="title-primary">...Every Bite A Promise Kept</h6>
 						 <div class="meals">
